# Engram

./: README.md  main.py  pyproject.toml
engram/: __init__.py  server.py
engram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
engram/embeddings/: __init__.py  provider.py
engram/index/: __init__.py  setup.py
engram/redis/: __init__.py  client.py
scripts/: migrate_legacy.py
tests/: __init__.py  test_embeddings.py  test_fastmcp_server.py  test_index_setup.py  test_redis_client.py  test_server.py
